✨ Updated manifest app name

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "short_name": "TS",
-    "name": "Twitter-Summariser",
+    "name": "Twitter Summariser",
     "icons": [
         {
             "src": "maskable_icon.png",
