--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,12 +5,8 @@ on:
     branches: [develop, master]
 
 jobs:
-  Coverage:
+  Backend-Coverage:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: client
-
     steps:
       - name: Checkout to devlop/master branch
         uses: actions/checkout@v2
@@ -23,21 +19,19 @@ jobs:
       - name: Install all package dependencies
         run: yarn
 
-      # - name: Generate coverage report for backend
-      #   run: yarn test -- --coverage
+      - name: Generate coverage report for backend
+        run: yarn test -- --coverage
 
       - name: Changed to client directory and generate coverage for frontend
         run: |
+          cd client
           yarn
           yarn test -- --coverage --watchAll=false
-
-      # - name: Merge the coverage reports
-      #   run: |
-      #     ls
-      #     node tools/scripts/merge-reports.js
-      #     cat ./coverage/lcov.info
+      - name: Merge the coverage reports
+        run: |
+          node tools/scripts/merge-reports.js
+          cat ./coverage/lcov.info
       - name: Upload report to Coveralls
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: ${{ github.workspace }}/client/coverage/lcov.info
