--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai": "^4.3.6",
     "dotenv": "^16.0.1",
     "lambda-tester": "^4.0.1",
+    "superagent": "^7.1.6",
     "twitter-v2": "^1.1.0"
   },
   "devDependencies": {
