--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -44,4 +44,6 @@ jobs:
       - name: Invalidating Cloudfrount Cache
         run: |
           npm i -g aws-cli
+          npm i -g aws-sdk
+          npm i @aws-sdk/aws-cloudfront
           aws cloudfront create-invalidation --distribution-id E2MJZ6KHWRD9W0 --paths "/*" 
