💚 ✨ (CICD): Excluded some paths for backend test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,9 @@ jobs:
         with:
           filters: |
             backend:
-              - 'src/**'
+              - '**'
+              - '!client'
+              - '!.github'
             frontend:
               - 'client/**'
 
