💚 🚑(CICD): Fixed path conditions for workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,10 @@ jobs:
           filters: |
             backend:
               - '**'
-              - '!client'
-              - '!.github'
+              - '!client/**'
+              - '!.github/**'
+              - '!.dynamodb/**'
+              - '!tools/**'
             frontend:
               - 'client/**'
 
