🚑 (CICD): Path filtering

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,11 +65,12 @@ jobs:
         with:
           filters: |
             backend:
-              - '**'
-              - '!client/**'
-              - '!.github/**'
-              - '!.dynamodb/**'
-              - '!tools/**'
+              - 'src/**'
+              - '*.json'
+              - '*.js'
+              - '*.ts'
+              - '*.nvmrc'
+              - 'yarn.lock'
             frontend:
               - 'client/**'
 
