--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,8 +5,12 @@ on:
     branches: [develop, master]
 
 jobs:
-  Backend-Coverage:
+  Coverage:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: client
+
     steps:
       - name: Checkout to devlop/master branch
         uses: actions/checkout@v2
@@ -20,17 +24,17 @@ jobs:
         run: yarn
 
       - name: Generate coverage report for backend
-        run: yarn test -- --coverage
+        run: yarn test --coverage . --watchAll=false
 
-      - name: Changed to client directory and generate coverage for frontend
-        run: |
-          cd client
-          yarn
-          yarn test -- --coverage --watchAll=false
-      - name: Merge the coverage reports
-        run: |
-          node tools/scripts/merge-reports.js
-          cat ./coverage/lcov.info
+      # - name: Changed to client directory and generate coverage for frontend
+      #   run: |
+      #     cd client
+      #     yarn
+      #     yarn test -- --coverage --watchAll=false
+      # - name: Merge the coverage reports
+        # run: |
+        #   node tools/scripts/merge-reports.js
+        #   cat ./coverage/lcov.info
       - name: Upload report to Coveralls
         uses: coverallsapp/github-action@master
         with:
