--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -38,4 +38,5 @@ jobs:
       - name: Upload report to Coveralls
         uses: coverallsapp/github-action@master
         with:
+          path-to-lcov: ${{ github.workspace }}/client/coverage/lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }}
