--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,7 +24,7 @@ jobs:
         run: yarn
 
       - name: Generate coverage report for backend
-        run: yarn test --coverage . --watchAll=false
+        run: yarn test --coverage --watchAll=false
 
       # - name: Changed to client directory and generate coverage for frontend
       #   run: |
