--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -35,8 +35,9 @@ jobs:
         # run: |
         #   node tools/scripts/merge-reports.js
         #   cat ./coverage/lcov.info
-      - name: Upload report to Coveralls
-        uses: coverallsapp/github-action@master
+      - uses: actions/checkout@master
+      - uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           path-to-lcov: ${{ github.workspace }}/client/coverage/lcov.info
           github-token: ${{ secrets.GITHUB_TOKEN }}
