🚑 (CICD): Typo fix

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,7 +2,7 @@ name: "Coveralls Coverage"
 
 on:
   workflow_run:
-    wokrflow: ['Serverless Deploy']
+    workflow: ['Serverless Deploy']
     types:
       - completed
 
