--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test-eslint": "npx eslint \"src/**\" --fix",
+    "lint:fix": "eslint --fix \"src/**\"",
+    "format": "prettier --write \"src/**\" --config ./.prettierrc",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,23 +46,23 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "coveralls": "^3.1.1",
-    "eslint": "^8.15.0",
+    "eslint": "^8.18.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.13",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "react-router-dom": "6",
     "tailwindcss": "^3.0.24"
   }
