--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -47,4 +47,4 @@ jobs:
           npm i -g aws-cli
           npm i -g aws-sdk
           npm i @aws-cdk/aws-cloudfront
-          aws cloudfront create-invalidation --distribution-id E2MJZ6KHWRD9W0 --paths "/*" 
+          aws cloudfront create-invalidation --distribution-id E39QEC4D07PM46 --paths "/*" 
