--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,12 @@
         "format": "prettier --write \"src/**\" --config ./.prettierrc",
         "eject": "react-scripts eject"
     },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
     "browserslist": {
         "production": [
             ">0.2%",
@@ -46,20 +52,19 @@
         ]
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^5.30.0",
-        "@typescript-eslint/parser": "^5.30.0",
+        "@typescript-eslint/eslint-plugin": "^5.30.3",
+        "@typescript-eslint/parser": "^5.30.3",
         "autoprefixer": "^10.4.7",
         "axios": "^0.27.2",
-        "coveralls": "^3.1.1",
-        "eslint": "^7.32.0 || ^8.2.0",
+        "eslint": "^8.19.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-import-resolver-typescript": "^3.1.3",
-        "eslint-plugin-import": "^2.25.3",
+        "eslint-import-resolver-typescript": "^3.1.4",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.3.0",
         "postcss": "^8.4.13",
         "prettier": "^2.7.1",
