✨ (CICD): Introduced linting to the workflow

--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -28,6 +28,8 @@ jobs:
         run: |
           cd client
           yarn
+          CI=false yarn lint:fix
+          CI=false yarn format
           CI=false yarn run build
 
       - name: Serverless deploy
