--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
         "test": "react-scripts test",
         "test-eslint": "npx eslint \"src/**\" --fix",
         "lint:fix": "eslint --fix \"src/**\"",
-        "format": "prettier --write \"src/**\" --config .prettierrc",
+        "format": "prettier --write \"src/**\"",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
