--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,6 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "test-eslint": "npx eslint \"src/**\" --fix",
         "lint:fix": "eslint --fix \"src/**\"",
         "format": "prettier --write \"src/**\"",
         "eject": "react-scripts eject"
@@ -67,6 +66,7 @@
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.3.0",
         "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
         "postcss": "^8.4.13",
         "prettier": "^2.7.1",
         "tailwindcss": "^3.0.24"
