--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "lint:fix": "eslint --fix \"src/**\"",
-        "format": "prettier --write \"src/**\"",
+        "format": "prettier --write \"src/**\" --config .prettierrc",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
