--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
         "test": "react-scripts test",
         "lint:fix": "eslint --fix \"src/**\"",
         "format": "prettier --write \"src/**\" --config .prettierrc",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "prepare": "cd .. && husky install client/.husky"
     },
     "eslintConfig": {
         "extends": [
