--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,7 @@
         "test": "react-scripts test",
         "lint:fix": "eslint --fix \"src/**\"",
         "format": "prettier --write \"src/**\" --config .prettierrc",
-        "eject": "react-scripts eject",
-        "prepare": "cd .. && husky install client/.husky"
+        "eject": "react-scripts eject"
     },
     "eslintConfig": {
         "extends": [
@@ -66,8 +65,6 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.3.0",
-        "husky": "^8.0.1",
-        "lint-staged": "^13.0.3",
         "postcss": "^8.4.13",
         "prettier": "^2.7.1",
         "tailwindcss": "^3.0.24"
