--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^14.14.25",
     "@types/superagent": "^4.1.15",
     "esbuild": "^0.14.11",
+    "eslint": "^8.19.0",
     "glob": "^8.0.3",
     "jest": "^28.1.0",
     "json-schema-to-ts": "^1.5.0",
