--- a/package.json
+++ b/package.json
@@ -28,12 +28,21 @@
     "@types/jest": "^27.5.1",
     "@types/node": "^14.14.25",
     "@types/superagent": "^4.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.30.4",
+    "@typescript-eslint/parser": "^5.30.4",
     "esbuild": "^0.14.11",
     "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.2.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "glob": "^8.0.3",
     "jest": "^28.1.0",
     "json-schema-to-ts": "^1.5.0",
     "path": "^0.12.7",
+    "prettier": "^2.7.1",
     "serverless": "^3.0.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-esbuild": "^1.29.0",
