--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,15 @@
-*.css
-*.svg
+client/*.css
+client/*.svg
+client/*.md
+client/*.js
+client/build
+client/coverage
+client/node_modules
+coverage
+node_modules
+.github
+.esbuild
+.dynamodb
+.serverless
+*.md
+*.js
