--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,14 +94,16 @@ jobs:
       - name: Install all package dependencies
         run:  yarn
 
-      - name: Lint the frontend code
-        run:  yarn lint:fix
+      # - name: Lint the frontend code
+      #   run:  yarn lint:fix
 
       - name: Build the React App
         run:  CI=false yarn run build
 
       - name: Format the code with Prettier
-        run:  yarn format
+        run:  |
+          cd ..
+          yarn format
 
       - name: Run frontend tests
         run:  yarn test --watchAll=false
