--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -24,13 +24,14 @@ jobs:
       - name: Install package dependencies for backend
         run: yarn
 
+      - name: Format all files with Prettier
+        run: yarn format
+
       - name: Install package dependencies for the React App and build it
         run: |
           cd client
           yarn
-          yarn lint:fix
           CI=false yarn run build
-          yarn format
 
       - name: Serverless deploy
         uses: serverless/github-action@v3
