--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -1,10 +1,10 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@functions/*": ["src/functions/*"],
-      "@libs/*": ["src/libs/*"],
-      "@model/*": ["src/model/*"],
-    }
-  }
+	"compilerOptions": {
+		"baseUrl": ".",
+		"paths": {
+			"@functions/*": ["src/functions/*"],
+			"@libs/*": ["src/libs/*"],
+			"@model/*": ["src/model/*"]
+		}
+	}
 }
