🚑 (CICD): Attempt to fix failing lint job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,7 +94,10 @@ jobs:
           node-version: "14.x"
 
       - name: Install all backend package dependencies
-        run: yarn
+        run:  |
+          yarn
+          cd client
+          yarn
 
       - name: Run the linter and attempt to fix errors
         run: yarn lint:fix
