--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -16,22 +16,11 @@ jobs:
       - name: Checkout to develop branch
         uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Download the Twitter Summariser artifact
+        uses: actions/download-artifact@master
         with:
-          node-version: "14.x"
-
-      - name: Install package dependencies for backend
-        run: yarn
-
-      - name: Format all files with Prettier
-        run: yarn format
-
-      - name: Install package dependencies for the React App and build it
-        run: |
-          cd client
-          yarn
-          CI=false yarn run build
+          name: twitter-summariser-build
+          path: client/build
 
       - name: Serverless deploy
         uses: serverless/github-action@v3
