--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -8,7 +8,11 @@ on:
       - closed
 
 jobs:
+  use-build:
+    uses: COS301-SE-2022/Twitter-Summariser/.github/workflows/build.yml@main
+
   Serverless-Deploy:
+    needs: use-build
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
 
