--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -159,3 +159,40 @@ jobs:
 
       - name: Run the tests
         run: yarn test
+
+  Serverless-Deploy:
+    # needs: use-build
+    if: ${{ github.event.pull_request.merged }}
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout to develop branch
+        uses: actions/checkout@v2
+
+      - name: Download the Twitter Summariser artifact
+        uses: actions/download-artifact@master
+        with:
+          name: twitter-summariser-build
+          path: client/build
+
+      - name: Install package dependencies for backend
+        run: yarn
+
+      - name: Serverless deploy
+        uses: serverless/github-action@v3
+        with:
+          args: deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Invalidating Cloudfrount Cache
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+        run: |
+          npm i -g aws-cli
+          npm i -g aws-sdk
+          npm i @aws-cdk/aws-cloudfront
+          aws cloudfront create-invalidation --distribution-id E39QEC4D07PM46 --paths "/*" 
