--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,7 +7,7 @@ on:
       - completed
 
 jobs:
-  on-success:
+  Coverage:
     name: Get code coverage and upload to codecov
     runs-on: ubuntu-latest
 
@@ -38,10 +38,3 @@ jobs:
 
       - name: Upload the merged coverage reports to Codecov
         uses: codecov/codecov-action@v3
-
-  on-failure:
-    name: Serverless Deploy Failed
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-    steps:
-      - run: echo 'The Serverless-Deploy workflow failed'
