--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,16 +102,18 @@ jobs:
         run:  yarn
 
       - name: Run frontend tests
-        run:  yarn test
+        run:  yarn test --coverage --watchAll=false
 
       - name: Build the React App
         run:  yarn run build
 
-      - name: Upload build folder as artifact
+      - name: Upload build & coverage folder as artifact
         uses: actions/upload-artifact@v3
         with:
-          name: twitter-summariser-build
-          path: client/build/
+          name: client-artifacts
+          path: |
+            client/build/
+            client/coverage/
 
   backend:
     name: Testing of backend
@@ -131,4 +133,10 @@ jobs:
         run: yarn
 
       - name: Run the tests
-        run: yarn test
+        run: yarn test -- --coverage
+
+      - name: Upload backend coverage folder as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: backend-artifact
+          path: coverage/
