--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -20,7 +20,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: build.yml
-          name: twitter-summariser-build
+          name: client-artifacts
           path: client/build
 
       - name: Install package dependencies for backend
