🔥 (CICD): Updated workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,13 +107,11 @@ jobs:
       - name: Build the React App
         run:  yarn run build
 
-      - name: Upload build & coverage folder as artifact
+      - name: Upload client coverage folder as artifact
         uses: actions/upload-artifact@v3
         with:
-          name: client-artifacts
-          path: |
-            client/build/
-            client/coverage/
+          name: client-artifact
+          path: client/coverage/
 
   backend:
     name: Testing of backend
