--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -43,8 +43,8 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
-        # run: |
-        #   npm i -g aws-cli
-        #   npm i -g aws-sdk
+        run: |
+          npm i -g aws-cli
+          npm i -g aws-sdk
         #   npm i @aws-cdk/aws-cloudfront
           # aws cloudfront create-invalidation --distribution-id E10A4MW2FBT3U5 --paths "/*" 
