💚 🐛 (CICD): Updated glitch in workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,7 @@ jobs:
 
   frontend:
     name: Testing and building of frontend
+    needs: lint-and-format
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -114,6 +115,7 @@ jobs:
 
   backend:
     name: Testing of backend
+    needs: lint-and-format
     runs-on: ubuntu-latest
 
     steps:
