--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -15,6 +15,16 @@ jobs:
     steps:
       - name: Checkout to develop/master branch
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
+
+      - name: Run Prettier and fomat the code
+        uses: creyD/prettier_action@v4.2
+        with:
+          prettier_options: --write . --config .prettierrc
+          only_changed: true
+          commit_message: "🎨(CICD): All code has been formatted!"
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -27,7 +37,7 @@ jobs:
           yarn
           CI=false yarn run build
     
-      - name: Install package dependencies for backend
+      - name: Install all package dependencies for serverless
         run: yarn
 
       - name: Serverless deploy
