💚 ⚡️ 🔥 (CICD): Major changes to pipeline

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,12 +112,14 @@ jobs:
       - name: Build the React App
         run:  yarn run build
 
-      - name: Upload client coverage folder as artifact
+      - name: Upload client coverage folder & build forder as an artifact
         uses: actions/upload-artifact@v3
         with:
           name: client-artifact
-          path: client/coverage/
-
+          path: |
+            client/coverage/
+            client/build/
+          
   backend:
     name: Testing of backend
     needs: lint-and-format
