--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,7 +101,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version: "16.x"
+          cache: 'yarn'
 
       - name: Install all frontend package dependencies
         run:  yarn
@@ -132,7 +133,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version: "16.x"
+          cache: 'yarn'
 
       - name: Install all backend package dependencies
         run: yarn
