--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout to develop/master branch
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Download the Twitter Summariser artifact
         uses: dawidd6/action-download-artifact@v2
@@ -44,3 +46,9 @@ jobs:
           npm i -g aws-sdk
           npm i @aws-cdk/aws-cloudfront
           aws cloudfront create-invalidation --distribution-id E1SMKKY29H5MJB --paths "/*" 
+
+      - name: Run Prettier and fomat the code
+        uses: creyD/prettier_action@v4.2
+        with:
+          prettier_options: --write . --config .prettierrc
+          commit_message: "🎨(CICD): All code has been formatted!"
