--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,8 @@ jobs:
     steps:
       - name: Checkout to develop branch
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -77,6 +79,12 @@ jobs:
 
       - name: Run the linter and attempt to fix errors
         run: yarn lint:fix
+
+      - name: Run Prettier and fomat the code
+        uses: creyD/prettier_action@v4.2
+        with:
+          prettier_options: --write . --config .prettierrc
+          commit_message: "🎨(CICD): All code has been formatted!"
 
   frontend:
     name: Testing and building of frontend
