--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -16,12 +16,11 @@ jobs:
       - name: Checkout to develop/master branch
         uses: actions/checkout@v2
 
-      - name: Download the Twitter Summariser artifact
-        uses: dawidd6/action-download-artifact@v2
-        with:
-          workflow: build.yml
-          name: client-artifact
-          path: client/build
+      - name: Build the Twitter Summariser App
+        run:  |
+          cd client
+          yarn
+          CI=false yarn run build
     
       - name: Install package dependencies for backend
         run: yarn
