--- a/.github/workflows/serverless-deploy.yml
+++ b/.github/workflows/serverless-deploy.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Checkout to develop/master branch
         uses: actions/checkout@v2
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16.x"
+          cache: 'yarn'
+
       - name: Build the Twitter Summariser App
         run:  |
           cd client
