--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,8 +141,8 @@ jobs:
       - name: Run the linter and attempt to fix errors
         run: yarn lint:fix
 
-      - name: Run Prettier and fomat the code
-        uses: creyD/prettier_action@v4.2
-        with:
-          prettier_options: --write . --config .prettierrc
-          commit_message: "🎨(CICD): All code has been formatted!"
+      # - name: Run Prettier and fomat the code
+      #   uses: creyD/prettier_action@v4.2
+      #   with:
+      #     prettier_options: --write . --config .prettierrc
+      #     commit_message: "🎨(CICD): All code has been formatted!"
